@@ -9,7 +9,10 @@
 plugins {
     id 'java'
     id 'application'
-    id 'org.openjfx.javafxplugin' version '0.0.7'
+    id 'org.openjfx.javafxplugin' version '0.0.8'
+
+    id 'org.beryx.jlink' version '2.21.1'
+
 }
 
 
@@ -58,6 +61,30 @@ dependencies {
 repositories {
     mavenCentral()
 }
+
+jlink {
+
+    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+    launcher {
+        name = 'whatwebfx'
+
+        jvmArgs = [
+                "--add-opens", "javafx.graphics/javafx.css=de.jensd.fx.fontawesomefx.commons"
+        ]
+    }
+
+    jpackage {
+        if (org.gradle.internal.os.OperatingSystem.current().windows) {
+            installerOptions += ['--win-per-user-install', '--win-dir-chooser', '--win-menu', '--win-shortcut']
+        }
+        else{
+            installerType = "deb"
+            jpackageHome = "/usr/lib/jvm/jdk-14.0.2"
+            installerOptions = ['--linux-shortcut']
+        }
+    }
+}
+
 
 def newArgs = [ '--add-exports','java.desktop/com.apple.eawt=ALL-UNNAMED',]
 
